--- a/historical.html
+++ b/historical.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Historical Stats</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -21,7 +21,7 @@
       <span>👤</span>
     </div>
   </div>
-  
+
   <!-- Sub-nav with dropdown -->
   <div class="sub-nav">
     <a href="index.html">Home</a>
@@ -41,81 +41,62 @@
   <!-- Main Container -->
   <div class="container">
     <h1>Box Score</h1>
-    
-  <!-- Filter buttons -->
-  <div class="filter-bar">
-    <label for="competitionSelect">Competition:</label>
-    <select id="competitionSelect" onchange="updateYears()">
-      <option value="All">All</option>
-      <option value="U15 (Boys)">National U15 (Boys)</option>
-      <option value="U17 (Boys)">National U17 (Boys)</option>
-    </select>
-  
-    <label for="yearSelect">Year:</label>
-    <select id="yearSelect">
-      <option value="All">All</option>
-      <option value="2024">2024</option>
-      <option value="2025">2025</option>
-    </select>
-  
-    <div class="player-search">
-      <label for="playerInput">Player:</label>
-      <input type="text" id="playerInput" placeholder="Enter player name" />
+
+    <!-- Filter bar -->
+    <div class="filter-bar">
+      <label for="competitionSelect">Competition:</label>
+      <select id="competitionSelect">
+        <option value="All">All</option>
+        <option value="U15 (Boys)">National U15 (Boys)</option>
+        <option value="U17 (Boys)">National U17 (Boys)</option>
+      </select>
+
+      <label for="yearSelect">Year:</label>
+      <select id="yearSelect">
+        <option value="All">All</option>
+        <option value="2024">2024</option>
+        <option value="2025">2025</option>
+      </select>
+
+      <div class="player-search">
+        <label for="playerInput">Player:</label>
+        <input type="text" id="playerInput" placeholder="Enter player name" />
+      </div>
+
+      <button onclick="filterByCompetition()">Search</button>
     </div>
-  
-    <button onclick="filterByCompetition()">Search</button>
-  </div>
-  
-  <!-- sort bar -->
-  <div class="sort-bar">
-    <label for="sortSelect">Sort by:</label>
-    <select id="sortSelect">
-      <option value="pts">Points (PTS)</option>
-      <option value="min">Minutes (MIN)</option>
-      <option value="as">Assists (AS)</option>
-      <option value="reb">Rebounds (TR)</option>
-      <option value="st">Steals (ST)</option>
-      <option value="fgm">FG Made (FGM)</option>
-    </select>
-    <button onclick="sortByStat()">Sort 🔽</button>
-  </div>
-  
-   <!-- Box Score Table -->
-   <div class="table-wrapper table-type2">
+
+    <!-- Sort bar -->
+    <div class="sort-bar">
+      <label for="sortSelect">Sort by:</label>
+      <select id="sortSelect">
+        <option value="pts">Points (PTS)</option>
+        <option value="min">Minutes (MIN)</option>
+        <option value="as">Assists (AS)</option>
+        <option value="reb">Rebounds (TR)</option>
+        <option value="st">Steals (ST)</option>
+        <option value="fgm">FG Made (FGM)</option>
+      </select>
+      <button onclick="sortByStat()">Sort 🔽</button>
+    </div>
+
+    <!-- Table -->
+    <div class="table-wrapper table-type2">
       <table id="statsTable">
         <thead>
           <tr>
-            <th>Player</th>
-            <th>Competition</th>
-            <th>Year</th>
-            <th>Team</th>
-            <th>GP</th>
-            <th>Min</th>
-            <th>FGA</th>
-            <th>FGM</th>
-            <th>2FGA</th>
-            <th>2FGM</th>
-            <th>3FGA</th>
-            <th>3FGM</th>
-            <th>FTA</th>
-            <th>FTM</th>
-            <th>OR</th>
-            <th>DR</th>
-            <th>TR</th>
-            <th>AS</th>
-            <th>TO</th>
-            <th>ST</th>
-            <th>BS</th>
-            <th>PF</th>
-            <th>FD</th>
-            <th>PTS</th>
+            <th>Player</th><th>Competition</th><th>Year</th><th>Team</th>
+            <th>GP</th><th>Min</th><th>FGA</th><th>FGM</th>
+            <th>2FGA</th><th>2FGM</th><th>3FGA</th><th>3FGM</th>
+            <th>FTA</th><th>FTM</th><th>OR</th><th>DR</th><th>TR</th>
+            <th>AS</th><th>TO</th><th>ST</th><th>BS</th><th>PF</th><th>FD</th><th>PTS</th>
           </tr>
         </thead>
         <tbody></tbody>
       </table>
     </div>
-        
-    <!-- pagination -->
+
+    <!-- Pagination -->
     <div id="pagination" class="pagination">
       <button onclick="changePage(-1)">Previous</button>
       <span id="pageInfo">Page 1</span>
@@ -123,143 +104,108 @@
     </div>
   </div>
 
-<!-- JS Script -->
-<script>
-let originalData = [];
-let currentPage = 1;
-const pageSize = 25;
+  <!-- JS -->
+  <script>
+    let originalData = [];
+    let currentPage = 1;
+    const pageSize = 25;
 
-// Fetch and parse CSV data
-fetch('https://docs.google.com/spreadsheets/d/e/2PACX-1vTdFDyDmOtmFl1uhz2ZJkhb0rb6BjWabVdhvrwn6DZ9DRAhEdwKhvkZ_dGQVwBrs1qrTtJQiHf-JEyU/pub?output=csv')
-  .then(r => r.text())
-  .then(csv => {
-    const parsed = Papa.parse(csv, { header: true, skipEmptyLines: true }).data;
-    originalData = parsed.map(r => ({
-      player: r.Player,
-      competition: r.Competition,
-      year: r.Year,
-      team: r.Team,
-      gp: +r.GP,
-      min: +r['Min'],
-      fga: +r.FGA,
-      fgm: +r.FGM,
-      fga2: +r['2FGA'],
-      fgm2: +r['2FGM'],
-      fga3: +r['3FGA'],
-      fgm3: +r['3FGM'],
-      fta: +r.FTA,
-      ftm: +r.FTM,
-      oreb: +r.OR,
-      dreb: +r.DR,
-      treb: +r.TR,
-      as: +r.AS,
-      to: +r.TO,
-      st: +r.ST,
-      bs: +r.BS,
-      pf: +r.PF,
-      fd: +r.FD,
-      pts: +r.PTS
-    }));
-    renderTable();
-  })
-  .catch(err => {
-    console.error("Failed to load data", err);
-    alert("Could not load box score data.");
-  });
+    // Fetch and parse CSV
+    fetch('https://docs.google.com/spreadsheets/d/e/2PACX-1vTdFDyDmOtmFl1uhz2ZJkhb0rb6BjWabVdhvrwn6DZ9DRAhEdwKhvkZ_dGQVwBrs1qrTtJQiHf-JEyU/pub?output=csv')
+      .then(r => r.text())
+      .then(csv => {
+        const parsed = Papa.parse(csv, { header: true, skipEmptyLines: true }).data;
+        originalData = parsed.map(r => ({
+          player: r.Player,
+          competition: r.Competition,
+          year: r.Year,
+          team: r.Team,
+          gp: +r.GP,
+          min: +r['Min'],
+          fga: +r.FGA,
+          fgm: +r.FGM,
+          fga2: +r['2FGA'],
+          fgm2: +r['2FGM'],
+          fga3: +r['3FGA'],
+          fgm3: +r['3FGM'],
+          fta: +r.FTA,
+          ftm: +r.FTM,
+          oreb: +r.OR,
+          dreb: +r.DR,
+          treb: +r.TR,
+          as: +r.AS,
+          to: +r.TO,
+          st: +r.ST,
+          bs: +r.BS,
+          pf: +r.PF,
+          fd: +r.FD,
+          pts: +r.PTS
+        }));
+        renderTable();
+      })
+      .catch(err => {
+        console.error("Failed to load data", err);
+        alert("Could not load box score data.");
+      });
 
-function getFilteredData() {
-  const comp = document.getElementById('competitionSelect').value;
-  const year = document.getElementById('yearSelect').value;
-  const playerName = document.getElementById('playerInput').value.trim().toLowerCase();
+    function getFilteredData() {
+      const comp = document.getElementById('competitionSelect').value;
+      const year = document.getElementById('yearSelect').value;
+      const playerName = document.getElementById('playerInput').value.trim().toLowerCase();
 
-  return originalData.filter(row =>
-    (comp === 'All' || row.competition === comp) &&
-    (year === 'All' || row.year === year) &&
-    (!playerName || row.player.toLowerCase().includes(playerName))
-  );
-}
+      return originalData.filter(row =>
+        (comp === 'All' || row.competition === comp) &&
+        (year === 'All' || row.year === year) &&
+        (!playerName || row.player.toLowerCase().includes(playerName))
+      );
+    }
 
+    function renderTable() {
+      const data = getFilteredData();
+      const start = (currentPage - 1) * pageSize;
+      const paged = data.slice(start, start + pageSize);
 
-// Populate dropdown with unique competition values
-function populateCompetitionOptions() {
-  const sel = document.getElementById('competitionSelect');
-  sel.innerHTML = '<option>All</option>';
-  [...new Set(originalData.map(p => p.competition))].forEach(c => {
-    const opt = document.createElement('option');
-    opt.value = c;
-    opt.textContent = c;
-    sel.appendChild(opt);
-  });
-}
+      const tbody = document.querySelector('#statsTable tbody');
+      tbody.innerHTML = paged.map(r => `
+        <tr>
+          <td>${r.player}</td><td>${r.competition}</td><td>${r.year}</td><td>${r.team}</td>
+          <td>${r.gp}</td><td>${r.min}</td><td>${r.fga}</td><td>${r.fgm}</td>
+          <td>${r.fga2}</td><td>${r.fgm2}</td><td>${r.fga3}</td><td>${r.fgm3}</td>
+          <td>${r.fta}</td><td>${r.ftm}</td><td>${r.oreb}</td><td>${r.dreb}</td><td>${r.treb}</td>
+          <td>${r.as}</td><td>${r.to}</td><td>${r.st}</td><td>${r.bs}</td>
+          <td>${r.pf}</td><td>${r.fd}</td><td>${r.pts}</td>
+        </tr>
+      `).join('');
 
-function renderTable() {
-  const data = getFilteredData();
-  const start = (currentPage - 1) * pageSize;
-  const paged = data.slice(start, start + pageSize);
+      document.getElementById('pageInfo').textContent = `Page ${currentPage}`;
+    }
 
-  const tbody = document.querySelector('#statsTable tbody');
-  tbody.innerHTML = paged.map(r => `
-    <tr>
-      <td>${r.player}</td>
-      <td>${r.competition}</td>
-      <td>${r.year}</td>
-      <td>${r.team}</td>
-      <td>${r.gp}</td>
-      <td>${r.min}</td>
-      <td>${r.fga}</td>
-      <td>${r.fgm}</td>
-      <td>${r.fga2}</td>
-      <td>${r.fgm2}</td>
-      <td>${r.fga3}</td>
-      <td>${r.fgm3}</td>
-      <td>${r.fta}</td>
-      <td>${r.ftm}</td>
-      <td>${r.oreb}</td>
-      <td>${r.dreb}</td>
-      <td>${r.treb}</td>
-      <td>${r.as}</td>
-      <td>${r.to}</td>
-      <td>${r.st}</td>
-      <td>${r.bs}</td>
-      <td>${r.pf}</td>
-      <td>${r.fd}</td>
-      <td>${r.pts}</td>
-    </tr>
-  `).join('');
+    function changePage(delta) {
+      const data = getFilteredData();
+      const totalPages = Math.ceil(data.length / pageSize);
+      currentPage = Math.max(1, Math.min(totalPages, currentPage + delta));
+      renderTable();
+    }
 
-  document.getElementById('pageInfo').textContent = `Page ${currentPage}`;
-}
+    function sortByStat() {
+      const stat = document.getElementById('sortSelect').value;
+      const statKey = stat === 'reb' ? 'treb' : stat; // map "reb" to "treb"
+      originalData.sort((a, b) => b[statKey] - a[statKey]);
+      currentPage = 1;
+      renderTable();
+    }
 
-function changePage(delta) {
-  const data = getFilteredData();
-  const totalPages = Math.ceil(data.length / pageSize);
-  currentPage = Math.max(1, Math.min(totalPages, currentPage + delta));
-  renderTable();
-}
+    function filterByCompetition() {
+      currentPage = 1;
+      renderTable();
+    }
 
-function sortByStat() {
-  const stat = document.getElementById('sortSelect').value;
-  originalData.sort((a, b) => b[stat] - a[stat]);
-  currentPage = 1;
-  renderTable();
-}
-
-function filterByCompetition() {
-  currentPage = 1;
-  renderTable();
-}
-
-function getSelectValues(sel) {
-  return [...sel.selectedOptions].map(o => o.value);
-}
-
-
-// Event bindings after DOM loads
-document.addEventListener('DOMContentLoaded', () => {
-  document.getElementById('competitionSelect').addEventListener('change', filterByCompetition);
-  document.getElementById('yearSelect').addEventListener('change', filterByCompetition);
-  document.getElementById('playerInput').addEventListener('input', filterByCompetition);
-});
-</script>
+    // Setup dynamic filters
+    document.addEventListener('DOMContentLoaded', () => {
+      document.getElementById('competitionSelect').addEventListener('change', filterByCompetition);
+      document.getElementById('yearSelect').addEventListener('change', filterByCompetition);
+      document.getElementById('playerInput').addEventListener('input', filterByCompetition);
+    });
+  </script>
 </body>
 </html>
