--- a/calculator.html
+++ b/calculator.html
@@ -63,9 +63,9 @@
         <label><input type="checkbox" name="stat" value="fg2"> 2FG% </label>
         <label><input type="checkbox" name="stat" value="fg3"> 3FG% </label>
         <label><input type="checkbox" name="stat" value="ft"> FT% </label>
-        <label><input type="checkbox" name="stat" value="oreb"> Offensive Rebounds </label>
-        <label><input type="checkbox" name="stat" value="dreb"> Defensive Rebounds </label>
-        <label><input type="checkbox" name="stat" value="treb"> Total Rebounds </label>
+        <label><input type="checkbox" name="stat" value="oreb"> Off-Rebounds </label>
+        <label><input type="checkbox" name="stat" value="dreb"> Def-Rebounds </label>
+        <label><input type="checkbox" name="stat" value="treb"> Tot-Rebounds </label>
         <label><input type="checkbox" name="stat" value="as"> Assists </label>
         <label><input type="checkbox" name="stat" value="to"> Turnovers </label>
         <label><input type="checkbox" name="stat" value="st"> Steals </label>
