--- a/calculator.html
+++ b/calculator.html
@@ -63,16 +63,16 @@
         <label><input type="checkbox" name="stat" value="fg2"> 2FG% </label>
         <label><input type="checkbox" name="stat" value="fg3"> 3FG% </label>
         <label><input type="checkbox" name="stat" value="ft"> FT% </label>
-        <label><input type="checkbox" name="stat" value="oreb"> Off-Rebounds </label>
-        <label><input type="checkbox" name="stat" value="dreb"> Def-Rebounds </label>
-        <label><input type="checkbox" name="stat" value="treb"> Tot-Rebounds </label>
+        <label><input type="checkbox" name="stat" value="oreb"> OffRebs </label>
+        <label><input type="checkbox" name="stat" value="dreb"> DedRebs </label>
+        <label><input type="checkbox" name="stat" value="treb"> TotRebs </label>
         <label><input type="checkbox" name="stat" value="as"> Assists </label>
         <label><input type="checkbox" name="stat" value="to"> Turnovers </label>
         <label><input type="checkbox" name="stat" value="st"> Steals </label>
         <label><input type="checkbox" name="stat" value="bs"> Blocked Shots </label>
         <label><input type="checkbox" name="stat" value="pf"> Personal Fouls </label>
         <label><input type="checkbox" name="stat" value="fd"> Fouls Drawn </label>
-        <label><input type="checkbox" name="stat" value="pts"> Total Points </label>
+        <label><input type="checkbox" name="stat" value="pts"> PTS </label>
       </div>
 
       <div class="name-input">
