--- a/calculator.html
+++ b/calculator.html
@@ -58,6 +58,11 @@
 
     <div class="weight-panel">
       <h2>Weight Allocation</h2>
+      <div class = "stats-chip">
+        <div class = "chip" data-value="fg" name = "stat"> FG% </div>
+      </div>
+
+      <!--
       <div class="stats-select">
         <label><input type="checkbox" name="stat" value="fg"> FG% </label>
         <label><input type="checkbox" name="stat" value="fg2"> 2FG% </label>
@@ -74,6 +79,7 @@
         <label><input type="checkbox" name="stat" value="fd"> Fouls Drawn </label>
         <label><input type="checkbox" name="stat" value="pts"> PTS </label>
       </div>
+      -->
 
       <div class="name-input">
         <label>Allocation Name:
