--- a/calculator.html
+++ b/calculator.html
@@ -60,6 +60,7 @@
       <h2>Weight Allocation</h2>
       <div class = "stats-chip">
         <div class = "chip" data-value="fg" name = "stat"> FG% </div>
+        <div class = "chip" data-value="fg2" name = "stat"> 2FG% </div>
       </div>
 
       <!--
