--- a/calculator.html
+++ b/calculator.html
@@ -61,6 +61,9 @@
       <div class = "stats-chip">
         <div class = "chip" data-value="fg" name = "stat"> FG% </div>
         <div class = "chip" data-value="fg2" name = "stat"> 2FG% </div>
+        <div class = "chip" data-value="fg3" name = "stat"> 3FG% </div>
+        <div class = "chip" data-value="ft" name = "stat"> FT% </div>
+        <div class = "chip" data-value="oreb" name = "stat"> OffRebs </div>
       </div>
 
       <!--
