--- a/calculator.html
+++ b/calculator.html
@@ -59,11 +59,16 @@
     <div class="weight-panel">
       <h2>Weight Allocation</h2>
       <div class = "stats-chip">
-        <div class = "chip" data-value="fg" name = "stat"> FG% </div>
-        <div class = "chip" data-value="fg2" name = "stat"> 2FG% </div>
-        <div class = "chip" data-value="fg3" name = "stat"> 3FG% </div>
-        <div class = "chip" data-value="ft" name = "stat"> FT% </div>
-        <div class = "chip" data-value="oreb" name = "stat"> OffRebs </div>
+        <div class = "chip" value="fg" name = "stat"> FG% </div>
+        <div class = "chip" value="fg2" name = "stat"> 2FG% </div>
+        <div class = "chip" value="fg3" name = "stat"> 3FG% </div>
+        <div class = "chip" value="ft" name = "stat"> FT% </div>
+        <div class = "chip" value="oreb" name = "stat"> OffRebs </div>
+        <div class = "chip" value="dreb" name = "stat"> DefRebs </div>
+        <div class = "chip" value="treb" name = "stat"> TotRebs </div>
+        <div class = "chip" value="as" name = "stat"> Assists </div>
+        <div class = "chip" value="to" name = "stat"> Turnovers </div>
+        <div class = "chip" value="oreb" name = "stat"> OffRebs </div>
       </div>
 
       <!--
