--- a/calculator.html
+++ b/calculator.html
@@ -68,7 +68,11 @@
         <div class = "chip" value="treb" name = "stat"> TotRebs </div>
         <div class = "chip" value="as" name = "stat"> Assists </div>
         <div class = "chip" value="to" name = "stat"> Turnovers </div>
-        <div class = "chip" value="oreb" name = "stat"> OffRebs </div>
+        <div class = "chip" value="st" name = "stat"> Steals </div>
+        <div class = "chip" value="bs" name = "stat"> Blocks </div>
+        <div class = "chip" value="pf" name = "stat"> Personal Fouls </div>
+        <div class = "chip" value="fd" name = "stat"> Fouls Drawn </div>
+        <div class = "chip" value="pts" name = "stat"> PTS </div>
       </div>
 
       <!--
