--- a/calculator.html
+++ b/calculator.html
@@ -59,6 +59,8 @@
     <div class="weight-panel">
       <h2>Weight Allocation</h2>
       <div class = "stats-chip">
+        <label><input type="chip" name="stat" value="fg"> FG% </label>
+        <!--
         <div class = "chip" value="fg" name = "stat"> FG% </div>
         <div class = "chip" value="fg2" name = "stat"> 2FG% </div>
         <div class = "chip" value="fg3" name = "stat"> 3FG% </div>
@@ -73,6 +75,7 @@
         <div class = "chip" value="pf" name = "stat"> Personal Fouls </div>
         <div class = "chip" value="fd" name = "stat"> Fouls Drawn </div>
         <div class = "chip" value="pts" name = "stat"> PTS </div>
+        -->
       </div>
     </div>
 
