--- a/calculator.html
+++ b/calculator.html
@@ -59,41 +59,22 @@
     <div class="weight-panel">
       <h2>Weight Allocation</h2>
       <div class = "stats-chip">
-        <div class = "chip" value="fg" name = "stat"> FG% </div>
-        <div class = "chip" value="fg2" name = "stat"> 2FG% </div>
-        <div class = "chip" value="fg3" name = "stat"> 3FG% </div>
-        <div class = "chip" value="ft" name = "stat"> FT% </div>
-        <div class = "chip" value="oreb" name = "stat"> OffRebs </div>
-        <div class = "chip" value="dreb" name = "stat"> DefRebs </div>
-        <div class = "chip" value="treb" name = "stat"> TotRebs </div>
-        <div class = "chip" value="as" name = "stat"> Assists </div>
-        <div class = "chip" value="to" name = "stat"> Turnovers </div>
-        <div class = "chip" value="st" name = "stat"> Steals </div>
-        <div class = "chip" value="bs" name = "stat"> Blocks </div>
-        <div class = "chip" value="pf" name = "stat"> Personal Fouls </div>
-        <div class = "chip" value="fd" name = "stat"> Fouls Drawn </div>
-        <div class = "chip" value="pts" name = "stat"> PTS </div>
+        <div class="chip" data-value="fg">FG%</div>
+        <div class="chip" data-value="fg2">2FG%</div>
+        <div class="chip" data-value="fg3">3FG%</div>
+        <div class="chip" data-value="ft">FT%</div>
+        <div class="chip" data-value="oreb">OffRebs</div>
+        <div class="chip" data-value="dreb">DefRebs</div>
+        <div class="chip" data-value="treb">TotRebs</div>
+        <div class="chip" data-value="as">Assists</div>
+        <div class="chip" data-value="to">Turnovers</div>
+        <div class="chip" data-value="st">Steals</div>
+        <div class="chip" data-value="bs">Blocks</div>
+        <div class="chip" data-value="pf">Personal Fouls</div>
+        <div class="chip" data-value="fd">Fouls Drawn</div>
+        <div class="chip" data-value="pts">PTS</div>
       </div>
     </div>
-
-      <!--
-      <div class="stats-select">
-        <label><input type="checkbox" name="stat" value="fg"> FG% </label>
-        <label><input type="checkbox" name="stat" value="fg2"> 2FG% </label>
-        <label><input type="checkbox" name="stat" value="fg3"> 3FG% </label>
-        <label><input type="checkbox" name="stat" value="ft"> FT% </label>
-        <label><input type="checkbox" name="stat" value="oreb"> OffRebs </label>
-        <label><input type="checkbox" name="stat" value="dreb"> DedRebs </label>
-        <label><input type="checkbox" name="stat" value="treb"> TotRebs </label>
-        <label><input type="checkbox" name="stat" value="as"> Assists </label>
-        <label><input type="checkbox" name="stat" value="to"> Turnovers </label>
-        <label><input type="checkbox" name="stat" value="st"> Steals </label>
-        <label><input type="checkbox" name="stat" value="bs"> Blocked Shots </label>
-        <label><input type="checkbox" name="stat" value="pf"> Personal Fouls </label>
-        <label><input type="checkbox" name="stat" value="fd"> Fouls Drawn </label>
-        <label><input type="checkbox" name="stat" value="pts"> PTS </label>
-      </div>
-      -->
 
       <div class="name-input">
         <label>Allocation Name:
